# svg_schematic

./: .bump.cfg  .bump.cfg.nt  .gitignore  README.rst  clean  install  pyproject.toml  schematic.py  setup.py  svg_schematic.py  test
.github/workflows/: build.yaml
doc/: Makefile  classes.rst  concepts.rst  conf.py  examples.rst  index.rst  releases.rst
doc/images/: amp.py  box.py  capacitor.py  clean  crossing.py  diode.py  lpf.py  makeall  mos.py  orient.py  resistor.py  rlc.py  source.py  tile.py  wires.py
examples/: README.rst  buck.py  charge-pump  charge-pump.py  clean  feedback  inverter  inverter.py  inverting.py  makeall  mfed.py  network-map.py  noninverting  noninverting.py  oscillator  oscillator.py  pipeline-adc  pipeline-adc.py  receiver  receiver.py  requirements.txt
examples/Golden/: Makefile
images/: bjt.py  gate.py  ground.py  inductor.py  label.py  makeall  mfed.py  pin.py  rlc.py  switch.py  tile.py  wires.py
